--- a/front/src/pages/login/LoginPage.css
+++ b/front/src/pages/login/LoginPage.css
@@ -7,7 +7,7 @@
 
 @import url(//fonts.googleapis.com/earlyaccess/jejuhallasan.css);
 
-.container {
+.login_container {
   width: 100%;
   height: 100vh;
   display: flex;
