--- a/front/src/pages/map/MapPage.css
+++ b/front/src/pages/map/MapPage.css
@@ -55,7 +55,9 @@
   display: flex;
   position: absolute;
   right: 0px;
-  top: 10px;
+  top: 20px;
+
+  cursor: pointer;
 }
 
 .card_separator {
@@ -71,7 +73,6 @@
   margin-right: 15px;
   transition: 0.3s
 }
-
 .card_img:hover {
   opacity: 0.6
 }
