--- a/front/src/pages/map/chat/ChatWrapper.css
+++ b/front/src/pages/map/chat/ChatWrapper.css
@@ -40,7 +40,7 @@
   right: 10px;
 }
 
-.chat_message_container {
+.chat_messages_container {
   width: 100%;
   flex-grow: 1;
   display: flex;
@@ -64,17 +64,17 @@
 }
 
 
-.chatbox_close_btn_img {
+.chat_close_btn_img {
   width: 100%;
   height: 100%;
 }
 
-.chatbox_message_wrapper {
+.single_chat_message_container {
   width: 100%;
   display: flex;
 }
 
-.chatbox_message_left {
+.left_chat_message {
   display: inline-block;
   padding: 10px;
   margin: 5px 5px;
@@ -84,7 +84,7 @@
   max-width: 80%;
 }
 
-.chatbox_message_right {
+.right_chat_message {
   display: inline-block;
   padding: 10px;
   margin: 5px 5px;
