--- a/front/src/pages/map/chat/ChatWrapper.css
+++ b/front/src/pages/map/chat/ChatWrapper.css
@@ -61,12 +61,14 @@
   outline: none;
   background: white;
   font-size: 14px;
+  padding-left: 7px;
 }
 
 
 .chat_close_btn_img {
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .single_chat_message_container {
@@ -76,20 +78,20 @@
 
 .left_chat_message {
   display: inline-block;
-  padding: 10px;
-  margin: 5px 5px;
-  border-radius: 25px;
-  background: rgba(211, 211, 211, 0.9);
-  font-size: 14px;
+  padding: 8px;
+  margin: 6px 6px;
+  border-radius: 15px;
+  background-color: rgba(204, 204, 204, 0.8);
+  font-size: 0.8rem;
   max-width: 80%;
 }
 
 .right_chat_message {
   display: inline-block;
-  padding: 10px;
-  margin: 5px 5px;
-  border-radius: 25px;
-  background: rgba(39, 220, 197, 0.9);
-  font-size: 14px;
+  padding: 8px;
+  margin: 6px 6px;
+  border-radius: 15px;
+  background-color: rgba(254, 231, 111, 0.8);
+  font-size: 0.8rem;
   max-width: 80%;
 }
