--- a/front/src/pages/map/MapPage.css
+++ b/front/src/pages/map/MapPage.css
@@ -77,7 +77,7 @@
   opacity: 0.6
 }
 
-.v_rooms_list {
+.video_rooms_list {
   position: absolute;
   bottom: 25px;
   right: 45px;
@@ -85,7 +85,7 @@
   flex-direction: row-reverse;
 }
 
-.v_rooms_join_button {
+.video_rooms_join_button {
   width: 45px;
   height: 45px;
   margin-right: 15px;
@@ -96,15 +96,15 @@
   transition: 0.3s
 }
 
-.v_rooms_join_button:hover {
+.video_rooms_join_button:hover {
   opacity: 0.6
 }
 
-.v_rooms_join_button:active {
+.video_rooms_join_button:active {
   background-color: black;
 }
 
-.v_rooms_videos_container {
+.video_rooms_videos_container {
   position: absolute;
   display: flex;
   flex-direction: column-reverse;
@@ -114,7 +114,7 @@
   align-items: flex-end;
 }
 
-.v_rooms_video_container {
+.video_rooms_video_container {
   height: 200px;
   width: 250px;
   background-color: black;
@@ -126,13 +126,13 @@
   justify-content: center;
 }
 
-.v_rooms_video_buttons_container {
+.video_rooms_video_buttons_container {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
 }
 
-.v_rooms_video_button {
+.video_rooms_video_button {
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -142,6 +142,6 @@
   transition: 0.3s;
 }
 
-.v_rooms_video_button:hover {
+.video_rooms_video_button:hover {
   opacity: 0.6;
 }
