--- a/front/src/pages/map/chat/ChatWrapper.css
+++ b/front/src/pages/map/chat/ChatWrapper.css
@@ -40,7 +40,7 @@
   right: 10px;
 }
 
-.chat_messages_container {
+.chat_msgs_container {
   width: 100%;
   flex-grow: 1;
   display: flex;
@@ -48,13 +48,13 @@
   overflow-y: auto;
 }
 
-.message_input_container {
+.msg_input_container {
   width: 100%;
   min-height: 40px;
   border-top: 1px solid #E5E5E5;
 }
 
-.message_input {
+.msg_input {
   width: calc(100% - 10px);
   height: 100%;
   border: none;
@@ -71,12 +71,12 @@
   cursor: pointer;
 }
 
-.single_chat_message_container {
+.single_chat_msg_container {
   width: 100%;
   display: flex;
 }
 
-.left_chat_message {
+.left_chat_msg {
   display: inline-block;
   padding: 8px;
   margin: 6px 6px;
@@ -86,7 +86,7 @@
   max-width: 80%;
 }
 
-.right_chat_message {
+.right_chat_msg {
   display: inline-block;
   padding: 8px;
   margin: 6px 6px;
