--- a/front/src/pages/map/MapPage.css
+++ b/front/src/pages/map/MapPage.css
@@ -56,8 +56,6 @@
   position: absolute;
   right: 0px;
   top: 20px;
-
-  cursor: pointer;
 }
 
 .card_separator {
@@ -71,7 +69,9 @@
   width: 45px;
   height: 45px;
   margin-right: 15px;
-  transition: 0.3s
+  transition: 0.3s;
+
+  cursor: pointer;
 }
 .card_img:hover {
   opacity: 0.6
@@ -95,7 +95,8 @@
   color: white;
   font-size: 24px;
   border: none;
-  transition: 0.3s
+  transition: 0.3s;
+  cursor: pointer;
 }
 .join_btn:hover {
   opacity: 0.6
