--- a/front/src/pages/map/MapPage.css
+++ b/front/src/pages/map/MapPage.css
@@ -137,10 +137,12 @@
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  background-color: aqua;
-  font-size: 16px;
-  border: none;
+  /* background-color: aqua; */
+  /* background-color: transparent; */
+  /* font-size: 16px; */
+  /* border: none; */
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .video_btn:hover {
